--- a/src/my.html
+++ b/src/my.html
@@ -56,10 +56,12 @@
                 <div style="text-align: center;border:1px solid #868686;padding:3px 10px;width:200px;border-radius: 3px;margin:auto;cursor: pointer;
                         position:absolute;bottom:100px;left:50%;transform:translateX(-50%);color:#868686;"
                     onclick="
-                        localStorage.clear()
-                        clearAllCookie()
-                        alert('重置完成')
-                        location.replace('./index.html')
+                        var r=confirm('确认重置吗?')
+                        if(r){
+                            localStorage.clear()
+                            clearAllCookie()
+                            location.replace('./index.html')
+                        }
                     ">
                     重 置
                 </div>
