--- a/src/index.html
+++ b/src/index.html
@@ -142,13 +142,13 @@
                 </button>
             </div>
             <div id="prevnextpad" style="box-sizing: border-box;width: 100%;display: flex;justify-content: space-between;margin: 0px auto;">    
-                <span id="prevline" class="unselectable" style="text-align: center;line-height: 40px;cursor:pointer;height: 40px;box-sizing: border-box;width: 33.3333333333%;background: white;border-width:1px 0 1px 0;border-color: #827e7e;font-size: 12px;padding: 0 5px;border-style:solid;background-color: #ffffff;">
+                <span id="prevline" class="unselectable" style="text-align: center;line-height: 38px;cursor:pointer;height: 38px;width: 33.3333333333%;background: white;border-width:1px 0 1px 0;border-color: #827e7e;font-size: 12px;border-style:solid;background-color: #ffffff;">
                     上一句
                 </span>
-                <span id="currline" class="unselectable" style="text-align: center;line-height: 40px;cursor:pointer;height: 40px;box-sizing: border-box;width: 33.3333333333%;background: white;border-width:1px 1px 1px 1px;border-color: #827e7e;font-size: 12px;padding: 0 5px;border-style: solid;background-color: #ffffff;">
+                <span id="currline" class="unselectable" style="text-align: center;line-height: 38px;cursor:pointer;height: 38px;width: 33.3333333333%;background: white;border-width:1px 1px 1px 1px;border-color: #827e7e;font-size: 12px;border-style: solid;background-color: #ffffff;">
                     本句
                 </span>
-                <span id="nextline" class="unselectable" style="text-align: center;line-height: 40px;cursor:pointer;height: 40px;box-sizing: border-box;width: 33.3333333333%;background: white;border-width:1px 0 1px 0;border-color:#827e7e;font-size: 12px;padding: 0 5px;border-style:solid;background-color: #ffffff;">
+                <span id="nextline" class="unselectable" style="text-align: center;line-height: 38px;cursor:pointer;height: 38px;width: 33.3333333333%;background: white;border-width:1px 0 1px 0;border-color:#827e7e;font-size: 12px;border-style:solid;background-color: #ffffff;">
                     下一句
                 </span>
             </div>
@@ -216,10 +216,14 @@
             </div>
 
             
-            <div id="titleinbackpad" class="unselectable" style="font-size:0;width:100%;height:20px;line-height:20px;position: absolute;right:0;bottom:80px;cursor: pointer;
+            
+            <div id="titleinbackpad" class="unselectable" style="font-size:0;width:100%;height:20px;line-height:20px;position: absolute;right:0;bottom:80px;
                     background-color: #ffffff;box-sizing: border-box;padding: 0 5px;overflow:hidden;text-overflow: ellipsis;white-space: nowrap;display:none;">
                 <span id="titleinback" style="font-size:12px;color:#bfbbbb;"></span>
             </div>
+            <!-- <div style="width:100%;height:30px;position:absolute;bottom:80px;border-top:1px solid #d8d8d8;box-sizing: border-box;">
+                <input style="width:100%;box-sizing: border-box;height:29px;line-height: 29px;border:none;padding:0 5px;"/>
+            </div> -->
             <div id="chatminpad" style="position:absolute;bottom:50px;width:100%;background-color: #d8d8d8;height:30px;line-height:30px;cursor: pointer;padding:0 17px 0 5px;
                                     font-size:0px;box-sizing: border-box;display:none;">
                 <span id="lastmsg" style="font-size: 13px;color:#6f6f6f;overflow:hidden;text-overflow: ellipsis;white-space: nowrap;display:inline-block;width:100%;"></span>
