--- a/src/video.html
+++ b/src/video.html
@@ -122,14 +122,14 @@
             </div>
             
            
-            <div style="box-sizing: border-box;width: 100%;display: flex;justify-content: space-between;margin: 0px auto;">    
-                <span id="prevline" class="unselectable" style="text-align: center;line-height: 40px;cursor:pointer;height: 40px;box-sizing: border-box;width: 33.3333333333%;background: white;border-width:1px 0 1px 0;border-color: #827e7e;font-size: 12px;padding: 0 5px;border-style:solid;background-color: #ffffff;">
+            <div id="prevnextpad" style="box-sizing: border-box;width: 100%;display: flex;justify-content: space-between;margin: 0px auto;">    
+                <span id="prevline" class="unselectable" style="text-align: center;line-height: 38px;cursor:pointer;height: 38px;width: 33.3333333333%;background: white;border-width:1px 0 1px 0;border-color: #827e7e;font-size: 12px;border-style:solid;background-color: #ffffff;">
                     上一句
                 </span>
-                <span id="currline" class="unselectable" style="text-align: center;line-height: 40px;cursor:pointer;height: 40px;box-sizing: border-box;width: 33.3333333333%;background: white;border-width:1px 1px 1px 1px;border-color: #827e7e;font-size: 12px;padding: 0 5px;border-style: solid;background-color: #ffffff;">
+                <span id="currline" class="unselectable" style="text-align: center;line-height: 38px;cursor:pointer;height: 38px;width: 33.3333333333%;background: white;border-width:1px 1px 1px 1px;border-color: #827e7e;font-size: 12px;border-style: solid;background-color: #ffffff;">
                     本句
                 </span>
-                <span id="nextline" class="unselectable" style="text-align: center;line-height: 40px;cursor:pointer;height: 40px;box-sizing: border-box;width: 33.3333333333%;background: white;border-width:1px 0 1px 0;border-color:#827e7e;font-size: 12px;padding: 0 5px;border-style:solid;background-color: #ffffff;">
+                <span id="nextline" class="unselectable" style="text-align: center;line-height: 38px;cursor:pointer;height: 38px;width: 33.3333333333%;background: white;border-width:1px 0 1px 0;border-color:#827e7e;font-size: 12px;border-style:solid;background-color: #ffffff;">
                     下一句
                 </span>
             </div>
