--- a/src/index.html
+++ b/src/index.html
@@ -65,7 +65,7 @@
     </head>
     <body class="unselectable" style="width: 100%;height: 100%;margin:0;padding:0;background-color: #000000;" >
         <div id="logo" style="max-width:800px;height:100%;position:relative;background-color: #ffffff;font-size:0;margin: auto;" >
-            <div style="font-size:50px;position:absolute;top:30%;width:100%;text-align: center;">Mumu</div>
+            <div style="font-size:50px;position:absolute;top:30%;width:100%;text-align: center;color:#e1e1e1;">Mumu</div>
         </div>
         
         <div id="index" style="max-width:800px;height:100%;margin: auto;position:relative;background-color: #ffffff;font-size:0;display: none;" >
