--- a/src/index.html
+++ b/src/index.html
@@ -64,7 +64,7 @@
         </style>
     </head>
     <body class="unselectable" style="width: 100%;height: 100%;margin:0;padding:0;background-color: #000000;" >
-        <div id="logo" style="max-width:800px;height:100%;position:relative;background-color: #ffffff;font-size:0;margin: auto;" >
+        <div id="logo" class="unselectable" style="max-width:800px;height:100%;position:relative;background-color: #ffffff;font-size:0;margin: auto;" >
             <div style="font-size:50px;position:absolute;top:30%;width:100%;text-align: center;color:#e1e1e1;">Mumu</div>
         </div>
         
