--- a/src/list.html
+++ b/src/list.html
@@ -98,7 +98,7 @@
     </head>
     <body style="background-color: #000000;">
         <div id="index" style="max-width: 800px;background-color: #ffffff;position: relative;top:0;height:100%;margin:auto;">
-            <div id="logo" style="width:100%;position:absolute;top:0;bottom:51px;background-color: #ffffff;font-size:0;z-index: 9999999;margin: auto;" >
+            <div id="logo" class="unselectable" style="width:100%;position:absolute;top:0;bottom:51px;background-color: #ffffff;font-size:0;z-index: 9999999;margin: auto;" >
                 <div style="font-size:50px;position:absolute;top:30%;width:100%;text-align: center;color:#e1e1e1;">Mumu</div>
             </div>
             <ul class="videoList" style="position: absolute;top:0;bottom:50px;overflow: auto;margin: 0px;padding: 0px;width:100%;margin-bottom:5px;">
