--- a/src/my.html
+++ b/src/my.html
@@ -30,7 +30,7 @@
         
     </head>
     <body style="background-color: #000000;width: 100%;height: 100%;margin:0;padding:0;" >
-        <div id="index" style="max-width: 800px;background-color: #ffffff;position: relative;top:0;height:100%;margin:auto;">
+        <div id="index" class="unselectable" style="max-width: 800px;background-color: #ffffff;position: relative;top:0;height:100%;margin:auto;">
             <div id="logo" style="width:100%;position:absolute;top:0;bottom:51px;background-color: #ffffff;font-size:0;z-index: 9999999;margin: auto;" >
                 <div style="font-size:50px;position:absolute;top:30%;width:100%;text-align: center;color:#e1e1e1;">Mumu</div>
             </div>
