--- a/src/list.html
+++ b/src/list.html
@@ -102,10 +102,10 @@
                 <div style="font-size:50px;position:absolute;top:30%;width:100%;text-align: center;color:#e1e1e1;">Mumu</div>
             </div>
             <ul class="videoList" style="position: absolute;top:0;bottom:50px;overflow: auto;margin: 0px;padding: 0px;width:100%;margin-bottom:5px;">
-                <a id="videotemplate" style="display:block;float:left;width:45%;height:155px;padding:0;margin-left:3.33%;margin-top:10px;
+                <a id="videotemplate" draggable="false" style="display:block;float:left;width:45%;height:155px;padding:0;margin-left:3.33%;margin-top:10px;
                         font-size:0;position:relative;cursor: pointer;display:none;text-decoration: blink;color:#000000;">
                     <div style="width:100%;height:109px;background-color: #dddddd;">
-                        <img class="cover" src="" style="width:100%;height:106px;object-fit: cover;"/>
+                        <img class="cover" draggable="false" src="" style="width:100%;height:106px;object-fit: cover;"/>
                     </div>
                     <progress class="progress" style="width:100%;height:5px;position:absolute;top:105px;"></progress>
                     <div class="name" style="width:100%;height:46px;background-color: #ffffff;font-size:13px;line-height:20px;overflow: hidden;word-break: break-word;
