--- a/src/list.html
+++ b/src/list.html
@@ -20,6 +20,7 @@
         <link rel="shortcut icon" href="./favicon.ico" >
         <script src="https://s2.pstatp.com/cdn/expire-1-M/jquery/3.5.1/jquery.min.js" type="application/javascript"></script>
         <script src="https://s0.pstatp.com/cdn/expire-1-M/jquery-cookie/1.4.1/jquery.cookie.min.js" type="application/javascript"></script>
+        <script src="./js/jquery-ajax-cache.min.js" type="application/javascript"></script>
         <script src="https://s2.pstatp.com/cdn/expire-1-M/vConsole/3.4.0/vconsole.min.js" type="application/javascript"></script>
         <script src="./js/log.js" type="application/javascript"></script>
         <script src="./js/page-pre.js" type="application/javascript"></script>
@@ -174,26 +175,27 @@
 
         function start(){
             getVideoList()
-            $.ajax({
-                url: '/mumu/showedboardmsg?',
-                type: 'get',
-                async: true,
-                success: function(res) {
-                    msg=res.data.msg;
-                    if(msg){
-                        if(msg.sys)
-                            $('#msg').text("系统: "+msg.text)
-                        else
-                            $('#msg').text("网友: "+msg.text)
-                    }
-                }
-            })
+            // $.ajax({
+            //     url: '/mumu/showedboardmsg?',
+            //     type: 'get',
+            //     async: true,
+            //     success: function(res) {
+            //         msg=res.data.msg;
+            //         if(msg){
+            //             if(msg.sys)
+            //                 $('#msg').text("系统: "+msg.text)
+            //             else
+            //                 $('#msg').text("网友: "+msg.text)
+            //         }
+            //     }
+            // })
         }
         function getVideoList(){
             let _this = this;
             $.ajax({
                 url: '/mumu/videos?',
                 type: 'get',
+                ajaxCache: true,
                 data: 'longvideo=1&kw='+''+'&start='+1+'&pageSize='+30,
                 async: true,
                 success: function(res) {
