--- a/src/my.html
+++ b/src/my.html
@@ -74,6 +74,9 @@
                     重 置
                 </div>
             </div>
+            <div id="version" style="font-size: 13px;color: #c3c3c3;cursor: pointer;position:absolute;bottom: 51px;height:20px;line-height: 20px;width:100%;text-align: center;">
+                
+            </div>
             
             <div style="font-size:0;height:50px;position: absolute;bottom:0;width:100%;border-top: 1px solid #dedede;background: #ffffff;">
                 <span class="unselectable" 
@@ -104,7 +107,7 @@
         setTimeout(function(){
             $('#logo').hide()
         },500)
-
+        $('#version').text(config.version)
          $.get('/mumu/wxjsapiticket',(res)=>{
             $.get('/mumu/wxsign',{ticket:res.data.ticket,url:location.href},(res)=>{
                 console.log(JSON.stringify(res));
