--- a/src/index.html
+++ b/src/index.html
@@ -146,8 +146,11 @@
                 <span id="prevline" class="unselectable" style="text-align: center;line-height: 38px;cursor:pointer;height: 38px;width: 33.3333333333%;background: white;border-width:1px 0 1px 0;border-color: #827e7e;font-size: 12px;border-style:solid;background-color: #ffffff;">
                     上一句
                 </span>
-                <span id="currline" class="unselectable" style="text-align: center;line-height: 38px;cursor:pointer;height: 38px;width: 33.3333333333%;background: white;border-width:1px 1px 1px 1px;border-color: #827e7e;font-size: 12px;border-style: solid;background-color: #ffffff;">
+                <span id="currline" class="unselectable" style="display:none;text-align: center;line-height: 38px;cursor:pointer;height: 38px;width: 33.3333333333%;background: white;border-width:1px 1px 1px 1px;border-color: #827e7e;font-size: 12px;border-style: solid;background-color: #ffffff;">
                     本句
+                </span>
+                <span id="loopLine" class="unselectable" style="text-align: center;line-height: 38px;cursor:pointer;height: 38px;width: 33.3333333333%;background: white;border-width:1px 1px 1px 1px;border-color: #827e7e;font-size: 12px;border-style: solid;background-color: #ffffff;">
+                    循环
                 </span>
                 <span id="nextline" class="unselectable" style="text-align: center;line-height: 38px;cursor:pointer;height: 38px;width: 33.3333333333%;background: white;border-width:1px 0 1px 0;border-color:#827e7e;font-size: 12px;border-style:solid;background-color: #ffffff;">
                     下一句
