--- a/src/index.html
+++ b/src/index.html
@@ -74,7 +74,7 @@
                 <img draggable="false"  src="./img/loading.gif" style="height:100%;width:100%;vertical-align: top;"/>
             </div>
             <!-- 视频块 -->
-             <video controls x5-playsinline playsinline controls360=no webkit-playsinline width="100%" id="video" poster autoplay preload muted
+             <video controls x5-playsinline playsinline controls360=no webkit-playsinline width="100%" id="video" poster autoplay preload
                 style="background: #000000;display: block;position: relative;top:-1000px;">
             </video>
 
