--- a/src/index.html
+++ b/src/index.html
@@ -115,7 +115,7 @@
             <div id="wordsframe" 
                 style="box-sizing: border-box;font-size:0;width:100%;position:absolute;
                     top: 0;color: #ffffff;padding:5px 10px;display:none;">
-                <form onsubmit="return false">
+                <form onsubmit="return false" action="javascript:return true">
                     <input id="word-in" autocomplete="off" type="text"
                         style="font-size: 16px;font-weight: 900;display: block;width:100%;box-sizing: border-box;border: none;
                             background-color: #eaeaea;border-radius: 1px;line-height: 25px;height: 25px;"/>
