--- a/src/index.html
+++ b/src/index.html
@@ -39,7 +39,7 @@
             }
             @media screen and (max-width: 800px) {
                 #video,#summtrans,#wordsframe,#videoshasow {
-                    height:220px;
+                    height:215px;
                 }
             }
 
@@ -130,7 +130,7 @@
                 <div id="wordsframe_cancel" style="text-align: center;font-size:16px;position:absolute;top:100px;left:0;right:0;">点击取消</div>
             </div>
             <div id="zh_subtitles" class="unselectable" 
-                style="line-height: 30px;width: 100%;text-align: center;min-height: 64px;background-color: #ffffff;margin-top:5px;font-size: 18px;" >
+                style="line-height: 30px;width: 100%;text-align: center;min-height: 64px;background-color: #ffffff;margin-top:5px;font-size: 18px;margin-bottom: 5px;" >
             </div>
             
             <div id="startstoppad" style="box-sizing: border-box;text-align: center;display:none;">
