--- a/src/index.html
+++ b/src/index.html
@@ -228,9 +228,9 @@
                     background-color: #ffffff;box-sizing: border-box;padding: 0 5px;overflow:hidden;text-overflow: ellipsis;white-space: nowrap;display:none;">
                 <span id="titleinback" style="font-size:12px;color:#bfbbbb;"></span>
             </div>
-            <div style="position:absolute;bottom:78px;width:100%;background-color: #ffffff;height:28px;line-height:28px;cursor: pointer;padding:0 17px 0 5px;
+            <div id="searchpadbtn" style="position:absolute;bottom:78px;width:100%;background-color: #ffffff;height:28px;line-height:28px;cursor: pointer;padding:0 17px 0 5px;
                                     font-size:0px;box-sizing: border-box;border-top:1px solid #efefef;">
-                <span style="font-size: 13px;color:#bfbbbb;overflow:hidden;text-overflow: ellipsis;white-space: nowrap;display:inline-block;width:100%;">
+                <span id="searchtext" style="font-size: 13px;color:#bfbbbb;overflow:hidden;text-overflow: ellipsis;white-space: nowrap;display:inline-block;width:100%;">
                     搜索
                 </span>
                 <svg style="position:absolute;right:2px;top:4px;" t="1621525927027" class="icon" viewBox="0 0 1024 1024" version="1.1" xmlns="http://www.w3.org/2000/svg" p-id="3665" width="18" height="18"><path d="M826.624 779.008l-130.56-130.56a292.352 292.352 0 1 0-37.376 35.072l131.584 131.584a25.6 25.6 0 0 0 36.352-36.096zM236.8 453.12a241.664 241.664 0 1 1 241.664 241.664 241.92 241.92 0 0 1-241.664-241.664z" fill="#3D3942" p-id="3666"></path><path d="M484.864 242.688a217.6 217.6 0 0 0-187.648 108.288 25.6 25.6 0 0 0 9.984 35.072 25.6 25.6 0 0 0 12.8 3.328 25.6 25.6 0 0 0 22.272-12.544 165.888 165.888 0 0 1 143.36-82.944 25.6 25.6 0 0 0 0-51.2z" fill="#3D3942" p-id="3667"></path></svg>            
@@ -312,11 +312,27 @@
                 <div  id="chatprivatepad"  style="position:absolute;bottom:0;width:100%;top:30px;display:none;font-size:0;">
                     <span style="font-size:16px;margin-top:30px;" class="translatable">coming soon</span>
                 </div>
-
-
-                <div></div>
             </div>
-            
+            <div id="searchpad" style="position:absolute;width:100%;background-color: rgba(0, 0, 0, 0.749);bottom:51px;
+                    box-shadow: 0px -1px 3px 0px black;font-size:0;display:none;box-sizing: border-box;padding:10px 5px;">
+                <span class="searchtag" style="font-size:16px;display:inline-block;min-width:50px;max-width:100px;height:25px;line-height: 25px;cursor: pointer;background-color: #fefefe;text-align: center;
+                        border-radius: 3px;color:#626262;margin:0 10px 5px 0;padding:0 8px;overflow:hidden;text-overflow: ellipsis;white-space: nowrap;">
+                    机场
+                </span>
+                <span class="searchtag" style="font-size:16px;display:inline-block;min-width:50px;max-width:100px;height:25px;line-height: 25px;cursor: pointer;background-color: #fefefe;text-align: center;
+                        border-radius: 3px;color:#626262;margin:0 10px 5px 0;padding:0 8px;overflow:hidden;text-overflow: ellipsis;white-space: nowrap;">
+                    办公室
+                </span>
+                <span class="searchtag" style="font-size:16px;display:inline-block;min-width:50px;max-width:100px;height:25px;line-height: 25px;cursor: pointer;background-color: #fefefe;text-align: center;
+                        border-radius: 3px;color:#626262;margin:0 10px 5px 0;padding:0 8px;overflow:hidden;text-overflow: ellipsis;white-space: nowrap;">
+                    购物
+                </span>
+
+                <div id="searchclear" style="position:absolute;width:150px;height:25px;line-height: 25px;font-size:14px;background-color: #fefefe;bottom:10px;left:50%;
+                        transform: translateX(-50%);text-align: center;border-radius: 3px;">
+                    清 空
+                </div>
+            </div>
             <div class="unselectable" draggable=false style="display:none;">
                 <script type="text/javascript">document.write(unescape("%3Cspan id='cnzz_stat_icon_1279792021'%3E%3C/span%3E%3Cscript src='https://s4.cnzz.com/z_stat.php%3Fid%3D1279792021%26online%3D1%26show%3Dline' type='text/javascript'%3E%3C/script%3E"));</script>
             </div>
