--- a/src/index.html
+++ b/src/index.html
@@ -315,15 +315,15 @@
             </div>
             <div id="searchpad" style="position:absolute;width:100%;background-color: rgba(0, 0, 0, 0.749);bottom:51px;
                     box-shadow: 0px -1px 3px 0px black;font-size:0;display:none;box-sizing: border-box;padding:10px 5px;">
-                <span class="searchtag" style="font-size:16px;display:inline-block;min-width:50px;max-width:100px;height:25px;line-height: 25px;cursor: pointer;background-color: #fefefe;text-align: center;
+                <span class="searchtag" style="font-size:16px;display:inline-block;min-width:50px;max-width:100px;height:25px;line-height: 25px;cursor: pointer;background-color: #ffd257;text-align: center;
                         border-radius: 3px;color:#626262;margin:0 10px 5px 0;padding:0 8px;overflow:hidden;text-overflow: ellipsis;white-space: nowrap;">
                     机场
                 </span>
-                <span class="searchtag" style="font-size:16px;display:inline-block;min-width:50px;max-width:100px;height:25px;line-height: 25px;cursor: pointer;background-color: #fefefe;text-align: center;
+                <span class="searchtag" style="font-size:16px;display:inline-block;min-width:50px;max-width:100px;height:25px;line-height: 25px;cursor: pointer;background-color: #ffd257;text-align: center;
                         border-radius: 3px;color:#626262;margin:0 10px 5px 0;padding:0 8px;overflow:hidden;text-overflow: ellipsis;white-space: nowrap;">
                     办公室
                 </span>
-                <span class="searchtag" style="font-size:16px;display:inline-block;min-width:50px;max-width:100px;height:25px;line-height: 25px;cursor: pointer;background-color: #fefefe;text-align: center;
+                <span class="searchtag" style="font-size:16px;display:inline-block;min-width:50px;max-width:100px;height:25px;line-height: 25px;cursor: pointer;background-color: #ffd257;text-align: center;
                         border-radius: 3px;color:#626262;margin:0 10px 5px 0;padding:0 8px;overflow:hidden;text-overflow: ellipsis;white-space: nowrap;">
                     购物
                 </span>
