--- a/src/index.html
+++ b/src/index.html
@@ -328,7 +328,7 @@
                     购物
                 </span>
 
-                <div id="searchclear" style="position:absolute;width:150px;height:25px;line-height: 25px;font-size:14px;background-color: #fefefe;bottom:10px;left:50%;
+                <div id="searchclear" style="cursor: pointer;position:absolute;width:150px;height:25px;line-height: 25px;font-size:14px;background-color: #fefefe;bottom:10px;left:50%;
                         transform: translateX(-50%);text-align: center;border-radius: 3px;">
                     清 空
                 </div>
