--- a/src/index.html
+++ b/src/index.html
@@ -266,7 +266,7 @@
             </div>
             
             
-            <div id="chatpad" style="position:absolute;bottom:0;width:100%;background-color: #9f9f9f;display:none;box-shadow: 0px 0px 10px 0px black;">
+            <div id="chatpad" style="position:absolute;bottom:0;width:100%;background-color: #d8d8d8;display:none;box-shadow: 0px 0px 10px 0px black;">
                 <div style="height:30px;width:100%;font-size:0;">
                     <span id="chatroombtn" 
                         style="display:inline-block;height:30px;background-color: #d7d7d7;width:50%;cursor: pointer;
@@ -330,7 +330,7 @@
 
                 <div id="searchclear" style="cursor: pointer;position:absolute;width:150px;height:25px;line-height: 25px;font-size:14px;background-color: #fefefe;bottom:10px;left:50%;
                         transform: translateX(-50%);text-align: center;border-radius: 3px;">
-                    清 空
+                    重 置
                 </div>
             </div>
             <div class="unselectable" draggable=false style="display:none;">
