--- a/src/index.html
+++ b/src/index.html
@@ -293,9 +293,9 @@
                             style="font-size:0;width:100%;height:35px;display:none;margin-bottom:5px;position: relative;">
                             <span class="name" 
                                 style="vertical-align: middle;height:20px;display:inline-block;font-size:13px;line-height:20px;width:55px;
-                                    overflow: hidden;text-align: right;">
+                                    overflow: hidden;text-align: right;color:#4a4a4a;">
                             </span>
-                            <span style="vertical-align: middle;height:20px;display:inline-block;font-size:13px;line-height:20px;">
+                            <span style="vertical-align: middle;height:20px;display:inline-block;font-size:13px;line-height:20px;margin-left: 2px;">
                                 :
                             </span>
                             <span class="msg translatable" 
