--- a/src/index.html
+++ b/src/index.html
@@ -295,7 +295,7 @@
                                 style="vertical-align: middle;height:20px;display:inline-block;font-size:13px;line-height:20px;width:55px;
                                     overflow: hidden;text-align: right;color:#4a4a4a;">
                             </span>
-                            <span style="vertical-align: middle;height:20px;display:inline-block;font-size:13px;line-height:20px;margin-left: 2px;">
+                            <span style="vertical-align: middle;height:20px;display:inline-block;font-size:13px;line-height:20px;margin-left: 2px;color:#4a4a4a;">
                                 :
                             </span>
                             <span class="msg translatable" 
@@ -304,7 +304,7 @@
                             </span>
                             <span class="looking" 
                                 style="top: 20px;vertical-align: middle;display:inline-block;font-size:12px;line-height:15px;position: absolute;left:65px;
-                                    right:0px;height:15px;overflow: hidden;color:#7e7e7e;text-overflow: ellipsis;white-space: nowrap;">
+                                    right:0px;height:15px;overflow: hidden;color:#9a9a9a;text-overflow: ellipsis;white-space: nowrap;">
                             </span>
                         </div>
                     </div>
