--- a/src/index.html
+++ b/src/index.html
@@ -63,6 +63,8 @@
             #cnzz_stat_icon_1279792021 a:link,a:visited {
                 color:#4e4e4e
             }
+
+
         </style>
     </head>
     <body class="unselectable" style="width: 100%;height: 100%;margin:0;padding:0;background-color: #000000;" >
@@ -169,7 +171,7 @@
                 <img id="finger" src="./img/finger.svg" style="position:absolute;left:50%;transform: translateX(-50%);top:45%;width:40px;"/>
             </div>
             <!-- 字幕控制显示组件块 -->
-            <div id="controlpad" style="justify-content: space-around;display: flex;height: 35px;align-items: center;">
+            <div id="controlpad" style="justify-content: space-around;display: flex;height: 35px;align-items: center;position:relative;">
                 <span id="replay" class="unselectable" 
                     style="font-size: 14px;cursor:pointer;padding: 0px;width: 13%;height: 33px;color: #bfbbbb;text-align: center;line-height: 33px;
                         border: 1px solid #bfbbbb;background-color: #ffffff;border-radius: 3px;">
@@ -202,7 +204,7 @@
                 </span>
             </div>
             <div  id="historywordspad" class="scrollbar" style="padding: 3px 5px;font-size:0;word-break: break-all;white-space: normal;margin-top: 15px;height: 150px;overflow: auto;position: relative;">
-                <span id="historyword_template" class="unselectable" style="font-size:15px;display:none;margin-right:15px;cursor: pointer;margin-bottom:5px;color:#9f9f9f;">
+                <span id="historyword_template" class="unselectable historyword" style="padding: 2px 3px;border-radius: 2px;font-size:15px;display:none;margin-right:8px;cursor: pointer;margin-bottom:5px;color:#9f9f9f;">
                 </span>
             </div>
             
