--- a/src/index.html
+++ b/src/index.html
@@ -135,7 +135,7 @@
                 style="line-height: 30px;width: 100%;text-align: center;min-height: 64px;background-color: #ffffff;margin-top:5px;font-size: 18px;margin-bottom: 5px;" >
             </div>
             
-            <div id="startstoppad" style="box-sizing: border-box;text-align: center;display:none;">
+            <!-- <div id="startstoppad" style="box-sizing: border-box;text-align: center;display:none;">
                 <button id="startFn"  class="startFn unselectable"
                     style="cursor:pointer;text-align: center;line-height: 40px;padding: 0px;background: white;border: 1px solid #827e7e;
                         font-size: 14px;padding: 0px;width: 100%;height: 40px;border-style:solid none solid none;">
@@ -146,7 +146,7 @@
                         font-size: 15px;padding: 0px;width: 100%;height: 40px;border-style:solid none solid none;">
                     ||
                 </button>
-            </div>
+            </div> -->
             <div id="prevnextpad" style="box-sizing: border-box;width: 100%;display: flex;justify-content: space-between;margin: 0px auto;">    
                 <span id="prevline" class="unselectable" style="text-align: center;line-height: 38px;cursor:pointer;height: 38px;width: 37.5%;background: white;border-width:1px 0 1px 0;border-color: #827e7e;font-size: 12px;border-style:solid;background-color: #ffffff;">
                     上一句
