--- a/src/index.html
+++ b/src/index.html
@@ -78,7 +78,7 @@
             </div>
             <!-- 视频块 -->
              <video controls x5-playsinline playsinline controls360=no webkit-playsinline width="100%" id="video" poster autoplay preload
-                style="background: #000000;display: block;position: relative;top:-1000px;">
+                style="background: #000000;display: block;position: relative;top:-1000px;object-fit: contain;">
             </video>
 
             
