--- a/src/index.html
+++ b/src/index.html
@@ -32,14 +32,14 @@
             
         </script>
         <style>
-            @media screen and (min-width: 800px) {
-                #video,#summtrans,#wordsframe,#videoshasow {
+            @media screen and (min-width: 700px) {
+                #video,#summtrans,#wordsframe {
                     height:350px;
                 }
             }
-            @media screen and (max-width: 800px) {
-                #video,#summtrans,#wordsframe,#videoshasow {
-                    height:215px;
+            @media screen and (max-width: 700px) {
+                #video,#summtrans,#wordsframe {
+                    height:220px;
                 }
             }
 
