--- a/src/list.html
+++ b/src/list.html
@@ -300,7 +300,10 @@
             }
             lastTouchEnd = now;
         }, false);
-        $.get('/mumu/wxjsapiticket',(res)=>{
+
+
+        if(is_weixn()){
+            $.get('/mumu/wxjsapiticket',(res)=>{
             $.get('/mumu/wxsign',{ticket:res.data.ticket,url:location.href},(res)=>{
                 console.log(JSON.stringify(res));
                 wx.config({
@@ -334,6 +337,9 @@
                 }
             })
         });
+
+        }
+        
 
 
         
