--- a/src/history.html
+++ b/src/history.html
@@ -133,22 +133,22 @@
             </div> -->
             <div style="font-size:0;height:50px;position: absolute;bottom:0;width:100%;border-top: 1px solid #dedede;background: #ffffff;">
                 <span class="unselectable" 
-                    style="font-size:16px;display: inline-block;width:25%;height:50px;line-height:50px;cursor: pointer;text-align: center;color:#919191;"
+                    style="font-size:16px;display: inline-block;width:25%;height:50px;line-height:50px;cursor: pointer;text-align: center;vertical-align: middle;color:#919191;"
                     onclick="location.replace('index.html')">
                     发现
                 </span>
                 <span class="unselectable" 
-                    style="font-size:16px;display: inline-block;width:25%;height:50px;line-height:50px;cursor: pointer;text-align: center;color:#919191;"
+                    style="font-size:16px;display: inline-block;width:25%;height:50px;line-height:50px;cursor: pointer;text-align: center;vertical-align: middle;color:#919191;"
                     onclick="location.replace('list.html')">
                     资源
                 </span>
                 <span class="unselectable" 
-                    style="font-size:18px;display: inline-block;width:25%;height:50px;line-height:50px;cursor: pointer;text-align: center;color:#000000;font-weight:900;"
+                    style="font-size:18px;display: inline-block;width:25%;height:50px;line-height:50px;cursor: pointer;text-align: center;vertical-align: middle;color:#000000;font-weight:900;"
                     onclick="location.replace('history.html')">
                     看过
                 </span>
                 <span class="unselectable" 
-                    style="font-size:16px;display: inline-block;width:25%;height:50px;line-height:50px;cursor: pointer;text-align: center;color:#919191;"
+                    style="font-size:16px;display: inline-block;width:25%;height:50px;line-height:50px;cursor: pointer;text-align: center;vertical-align: middle;color:#919191;"
                     onclick="location.replace('my.html')">
                     我的
                 </span>
@@ -165,7 +165,7 @@
             $('#logo').hide()
         },500)
         
-        var historyvideos = JSON.parse(localStorage.getItem('historyvideos'))
+        var historyvideos = JSON.parse(localStorage.getItem(config.project+'-historyvideos'))
         if(!historyvideos)
             historyvideos=[]
 
@@ -179,8 +179,8 @@
         }
         function getVideoList(){
             $(videoList).each((inx,item)=>{
-                var durationsec = localStorage.getItem('durationsec-'+item.no)
-                var currentTime = localStorage.getItem('currentTime-'+item.no)
+                var durationsec = localStorage.getItem(config.project+'-durationsec-'+item.no)
+                var currentTime = localStorage.getItem(config.project+'-currentTime-'+item.no)
                 $('.videoList').append(
                     '<li style="cursor:pointer;" >'+
                     `<a style="text-decoration:none;" draggable=false href=./video.html?videoNo=${item.no}>`+
