--- a/src/my.html
+++ b/src/my.html
@@ -89,22 +89,22 @@
             
             <div style="font-size:0;height:50px;position: absolute;bottom:0;width:100%;border-top: 1px solid #dedede;background: #ffffff;">
                 <span class="unselectable" 
-                    style="font-size:16px;display: inline-block;width:25%;height:50px;line-height:50px;cursor: pointer;text-align: center;color:#919191;"
+                    style="font-size:16px;display: inline-block;width:25%;height:50px;line-height:50px;cursor: pointer;text-align: center;vertical-align: middle;color:#919191;"
                     onclick="location.replace('index.html')">
                     发现
                 </span>
                 <span class="unselectable" 
-                    style="font-size:16px;display: inline-block;width:25%;height:50px;line-height:50px;cursor: pointer;text-align: center;color:#919191;"
+                    style="font-size:16px;display: inline-block;width:25%;height:50px;line-height:50px;cursor: pointer;text-align: center;vertical-align: middle;color:#919191;"
                     onclick="location.replace('list.html')">
                     资源
                 </span>
                 <span class="unselectable" 
-                    style="font-size:16px;display: inline-block;width:25%;height:50px;line-height:50px;cursor: pointer;text-align: center;color:#919191;"
+                    style="font-size:16px;display: inline-block;width:25%;height:50px;line-height:50px;cursor: pointer;text-align: center;vertical-align: middle;color:#919191;"
                     onclick="location.replace('history.html')">
                     看过
                 </span>
                 <span class="unselectable" 
-                    style="font-size:18px;display: inline-block;width:25%;height:50px;line-height:50px;cursor: pointer;text-align: center;color:#000000;font-weight:900;"
+                    style="font-size:18px;display: inline-block;width:25%;height:50px;line-height:50px;cursor: pointer;text-align: center;vertical-align: middle;color:#000000;font-weight:900;"
                     onclick="location.replace('my.html')">
                     我的
                 </span>
@@ -159,8 +159,8 @@
         
 
         statisticsexps()
-        var totalTranslates = localStorage.getItem('totaltranslates')
-        var totalSeconds = localStorage.getItem('totalseconds')
+        var totalTranslates = localStorage.getItem(config.project+'-totaltranslates')
+        var totalSeconds = localStorage.getItem(config.project+'-totalseconds')
         if(totalTranslates)
             $('#totalTranslates').text(totalTranslates+ ' 次')
         if(totalSeconds)
