--- a/src/index.html
+++ b/src/index.html
@@ -127,7 +127,7 @@
                     </div>
                 </div>
                 <div style="width:110px;display:inline-block;vertical-align: middle;position: absolute;top:0;bottom:30px;left:calc(100% - 111px);">
-                    <div style="height:24px;width:100%;box-sizing: border-box;border-bottom: 1px solid #3c3c3c;padding:2px 3px;">
+                    <div id="fromRelatedWordPad" style="height:24px;width:100%;box-sizing: border-box;border-bottom: 1px solid #3c3c3c;padding:2px 3px;cursor: pointer;">
                         <span id="fromRelatedWord" class="ellipsis" style="font-size:14px;line-height:20px;height:20px;display:inline-block;
                             width:76px;vertical-align: middle;letter-spacing: 0.5px;">
                             
